@@ -31,7 +31,7 @@ contfrac(x, tol = 1e-06)
 }
 \references{
   Hardy, G. H., and E. M. Wright (1979). An Introduction to the Theory of
-  Numbers. Fifth Edition, Oxford University Press, New York.
+  Numbers. Fifth Edition, Oxford University Press, New York. 
 }
 \author{
   HwB  <hwborchers@googlemail.com>
