@@ -13,7 +13,9 @@ CHANGES IN VERSION 1.1.9 (2012-09-29)
 
     o Removed number-theoretic functions: eulersPhi(),
       moebiusFun(), mertensFun(), sigma(), tau(), omega(), Omega(),
-      modpower(), modorder(), primroot().
+      primes2(), twinPrimes(), nextPrime(), previousPrime(),
+      modpower(), modorder(), primroot()
+      (these functions are now available in the 'numbers' package).
 
 CHANGES IN VERSION 1.1.8 (2012-09-19)
 
